--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "clsx": "^2.1.1",
     "fslightbox-react": "^1.8.0",
     "motion": "^12.16.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-slick": "^0.30.3",
+    "react-tabs": "^6.1.0",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.3.0"
   },
